# Armyy

./: .gitignore  CMakeLists.txt  main.cpp
Abilities/: Attack.cpp  Attack.h  NotEnoughMannaException.h  SpellCasterState.cpp  SpellCasterState.h  Transformable.h  UnitState.cpp  UnitState.h
Spells/: FireBall.cpp  FireBall.h  Spell.cpp  Spell.h  SpellBook.cpp  SpellBook.h  Spells.h
Tests/: Test_Unit.cpp  catch.hpp
Units/: Berserker.cpp  Berserker.h  Demon.cpp  Demon.h  Healer.cpp  Healer.h  Necromancer.cpp  Necromancer.h  Observable.cpp  Observable.h  Observer.cpp  Observer.h  Priest.cpp  Priest.h  Rogue.cpp  Rogue.h  Solider.cpp  Solider.h  SpellCaster.cpp  SpellCaster.h  Undead.cpp  Undead.h  Unit.cpp  Unit.h  UnitExceptions.h  Vampire.cpp  Vampire.h  Warlock.cpp  Warlock.h  Werewolf.cpp  Werewolf.h  Wizard.cpp  Wizard.h
